# reqwest_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.MD
.github/workflows/: cpp-build.yml  rust_build.yml
client/: CMakeLists.txt  Cargo.toml  aarch64-apple.sh  build.rs  lipo.sh  rust-toolchain.toml  x86_64-apple.sh
client/src/: byte_buffer.rs  client.rs  ffi.rs  headermap.rs  http_err.rs  http_exeception.rs  lib.rs  proxy.rs  request.rs  request_builder.rs  resp_body.rs  response.rs  rust_string.rs  utils.rs
crab_http/: CMakeLists.txt  client.cpp  client.h  client_builder.cpp  client_builder.h  crab_http.h  crab_http_c.h  header_map.cpp  header_map.h  http_exception.cpp  http_exception.h  proxy.cpp  proxy.h  r_string.cpp  r_string.h  request.cpp  request.h  request_builder.cpp  request_builder.h  resp_body.cpp  resp_body.h  response.cpp  response.h
gui/: CMakeLists.txt  client.hpp  ffi.hpp  main.cpp  main_window.cpp  main_window.hpp  response_content.cpp  response_content.h  rstring.hpp  wrappers.cpp  wrappers.hpp
gui/base/: platform.h  string.h
gui/base/internal/: code_shadow.hpp
gui/base/net/http/: client.cpp  client.h  client_builder.cpp  client_builder.h  header_map.cpp  header_map.h  http_exeception.cpp  http_exeception.h  http_ffi.hpp  http_opt.hpp  pair.cpp  pair.h  proxy.cpp  proxy.h  request_builder.cpp  request_builder.h  response.cpp  response.h
gui/base/util/: base64.cpp  base64.h  byte_buffer.cpp  byte_buffer.h  md5.cpp  md5.h  url.cpp  url.h
