[package]
name = "client"
version = "1.0.3"
authors = ["markrenChina <390835144@qq.com>"]
description = "T"
repository = "https://github.com/markrenChina/reqwest_cpp"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
fern = "0.6.2"
libc = "0.2.159"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
cbindgen = "0.27.0"