[package]
name = "crab_http"
version = "1.0.3"
authors = ["zhangdaoqiang <zdq@meitu.com>"]
description = "T"
repository = "https://techgit.meitu.com/yunxiu/mtyx_source/reqwest_cpp"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
fern = "0.7.1"
libc = "0.2.159"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["blocking", "json", "cookies", "multipart", "hickory-dns", "gzip", "zstd", "deflate", "charset", "native-tls", "rustls-tls"] }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.28.0"